updated frontend links

--- a/frontend/pages/browse.html
+++ b/frontend/pages/browse.html
@@ -98,8 +98,8 @@ a {
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="http://localhost:3000">
-          <img src="http://localhost:3000/logo" alt="" width="50" height="50">
+      <a class="navbar-brand" href="https://wozniacki-booksapp.herokuapp.com/">
+          <img src="https://wozniacki-booksapp.herokuapp.com//logo" alt="" width="50" height="50">
           BooksApp
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -108,13 +108,13 @@ a {
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav me-auto">
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="http://localhost:3000">Home</a>
+            <a class="nav-link" aria-current="page" href="https://wozniacki-booksapp.herokuapp.com/">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="http://localhost:3000/browse">Browse books</a>
+            <a class="nav-link active" href="https://wozniacki-booksapp.herokuapp.com//browse">Browse books</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="http://localhost:3000/add">Add books</a>
+            <a class="nav-link" href="https://wozniacki-booksapp.herokuapp.com//add">Add books</a>
           </li>
         </ul>
         <form class="d-flex">
