--- a/frontend/pages/index.html
+++ b/frontend/pages/index.html
@@ -99,8 +99,8 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="http://localhost:3000">
-              <img src="http://localhost:3000/logo" alt="App logo" width="50" height="50">
+          <a class="navbar-brand" href="https://wozniacki-booksapp.herokuapp.com/">
+              <img src="https://wozniacki-booksapp.herokuapp.com//logo" alt="App logo" width="50" height="50">
               BooksApp
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -109,13 +109,13 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav me-auto">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="http://localhost:3000">Home</a>
+                <a class="nav-link active" aria-current="page" href="https://wozniacki-booksapp.herokuapp.com/">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="http://localhost:3000/browse">Browse books</a>
+                <a class="nav-link" href="https://wozniacki-booksapp.herokuapp.com//browse">Browse books</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="http://localhost:3000/add">Add books</a>
+                <a class="nav-link" href="https://wozniacki-booksapp.herokuapp.com//add">Add books</a>
               </li>
             </ul>
             <form class="d-flex">
@@ -129,11 +129,11 @@
     <section class="py-5 text-center container">
       <div class="row py-lg-5">
         <div class="col-lg-6 col-md-8 mx-auto">
-          <h1 class="fw-light text-white"><img src="http://localhost:3000/logo" alt="App logo" width="50" height="50">BooksApp</h1>
+          <h1 class="fw-light text-white"><img src="https://wozniacki-booksapp.herokuapp.com//logo" alt="App logo" width="50" height="50">BooksApp</h1>
           <p class="lead text-white">Simple app to rate books</p>
           <p>
-            <a href="http://localhost:3000/browse" class="btn btn-light my-2">Browse books</a>
-            <a href="http://localhost:3000/add" class="btn btn-secondary my-2">Add book</a>
+            <a href="https://wozniacki-booksapp.herokuapp.com//browse" class="btn btn-light my-2">Browse books</a>
+            <a href="https://wozniacki-booksapp.herokuapp.com//add" class="btn btn-secondary my-2">Add book</a>
           </p>
         </div>
       </div>
