--- a/frontend/pages/index.html
+++ b/frontend/pages/index.html
@@ -99,7 +99,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="https://wozniacki-booksapp.herokuapp.com">
+          <a class="navbar-brand" href="https://wozniacki-booksapp.herokuapp.com/">
               <img src="https://wozniacki-booksapp.herokuapp.com/logo" alt="App logo" width="50" height="50">
               BooksApp
           </a>
@@ -109,7 +109,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav me-auto">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="https://wozniacki-booksapp.herokuapp.com">Home</a>
+                <a class="nav-link active" aria-current="page" href="https://wozniacki-booksapp.herokuapp.com/">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="https://wozniacki-booksapp.herokuapp.com/browse">Browse books</a>
@@ -216,7 +216,7 @@
         const bookCover3 = document.getElementById('bookCover3')
         const bookName3 = document.getElementById('bookName3')
 
-        axios.get('https://wozniacki-booksapp.herokuapp.combooks?items='+3)
+        axios.get('https://wozniacki-booksapp.herokuapp.com/books?items='+3)
         .then(function (response) {
             bookName1.innerHTML = response.data[0].name
             bookCover1.src = response.data[0].cover
@@ -238,7 +238,7 @@
 
     for(let i = 0; i < one.length; i++) {
         console.log(text[i].innerHTML)
-        axios.get('https://wozniacki-booksapp.herokuapp.combooks?name='+text[i].innerHTML)
+        axios.get('https://wozniacki-booksapp.herokuapp.com/books?name='+text[i].innerHTML)
             .then(function (response) {
                 console.log(response.data.average)
                 if(response.data.average == 5) {
